cmake_minimum_required(VERSION 4.0)
project(Sharvesh_355)

set(CMAKE_CXX_STANDARD 20)

add_executable(Sharvesh_355 main.cpp
        tries.hpp
        TriesApp.hpp
        Vector.hpp
        VectorApp.hpp
        ListApp.hpp
        LinkedList.hpp
        LinkedListApp.hpp
        AVL_Tree.hpp
        AVL_TreeApp.hpp
        BST_Lazy.hpp
        BST_Lazy_App.hpp
        #        book/practise2.cpp
)
